--- a/docstoc/trial_css.less
+++ b/docstoc/trial_css.less
@@ -1,7 +1,46 @@
 @background-color: #141414;
 
 body {
- background:@background-color; 
+  background:@background-color; 
   width:100%;
   height:100%;
+}
+.loading{
+  /*text-transform:uppercase;*/
+  /*font-family: 'Cabin Condensed', sans-serif;*/
+  /*font-weight:bold;*/
+  /*font-size:100pt;*/
+  /*text-align:center;*/
+  height:120px;
+  line-height:110px;
+  vertical-align:bottom;
+/*  position:absolute;
+*/  /*left:0;
+  right:0;*/
+  margin: 0 auto;
+  top:100px;
+  bottom:0;
+  display:block;
+}
+
+@-webkit-keyframes wave-animation {
+	0% { background-position:0 bottom };
+	100% { background-position:200px bottom };
+}
+
+@-webit-keyframes loading-animation {
+  0%{background-size:200px 0px};
+  100%{background-size:200px 200px};
+}
+.wave {
+   background-image:url('http://i.imgur.com/uFpLbYt.png');
+   width: 200px;
+   /*-webkit-background-clip: content-box;*/
+   /*-webkit-text-fill-color: transparent;*/
+   color:rgba(0,0,0,0);
+   /*text-shadow:0px 0px rgba(255,255,255,0.06);*/
+   -webkit-animation:wave-animation 1s infinite linear, loading-animation 10s infinite linear alternate;
+   background-size:200px 100px;
+   background-repeat:repeat-x;
+   opacity:1;
 }
